HDX-6380 - [download button] fixes          - align download button when more button not shown HDX-6356 - [roberta's rec] Tabular view on dataset page          - sentence case for tabs          - align logo with title          - test out hide/show text for dataset actions

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
@@ -391,6 +391,16 @@ body {
   color: #f2645a;
   text-transform: none;
 }
+.base-actions-menu ul li.hide-text i {
+  margin-right: 0;
+}
+.base-actions-menu ul li.hide-text span {
+  display: none;
+  margin-left: 5px;
+}
+.base-actions-menu ul li.hide-text:hover span {
+  display: inline;
+}
 .base-actions-menu ul li a i {
   margin-right: 5px;
 }
@@ -568,6 +578,9 @@ body {
   right: 10px;
   display: inline-block;
   vertical-align: middle;
+}
+.resource-item .hdx-btn-group.hdx-btn-group-fixed {
+  width: 235px;
 }
 .btn.hdx-btn.resource-btn {
   background-color: #888888;
