--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/header/base-actions-menu.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/header/base-actions-menu.less
@@ -40,6 +40,24 @@
         }
       }
 
+      &.hide-text {
+        i {
+          margin-right: 0;
+        }
+        span {
+          display: none;
+          margin-left: 5px;
+          //height: 16px;
+          //overflow: hidden;
+          //width: 0;
+        }
+        &:hover {
+          span {
+            display: inline;
+          }
+        }
+      }
+
       a {
         i {
           margin-right: 5px;
