--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/header/buttons.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/base/components/header/buttons.less
@@ -131,33 +131,37 @@
 }
 
 
-    .resource-item .hdx-btn-group{
-        position: absolute;
-        top: 14px;
-        right: 10px;
-        display: inline-block;
-        vertical-align: middle;
-    }
+.resource-item .hdx-btn-group{
+  position: absolute;
+  top: 14px;
+  right: 10px;
+  display: inline-block;
+  vertical-align: middle;
 
-    .btn.hdx-btn.resource-btn {
-      background-color: #888888;
-      color: white;
-      border: 0;
-      line-height: 35px;
-      margin-left: 10px;
-      text-transform: uppercase;
-      border-radius: 4px;
-      padding: 0 20px;
+  &.hdx-btn-group-fixed {
+    width: 235px;
+  }
+}
 
-      &.resource-icon-btn{
-        width: 35px;
-        padding: 0;
-      }
+.btn.hdx-btn.resource-btn {
+  background-color: #888888;
+  color: white;
+  border: 0;
+  line-height: 35px;
+  margin-left: 10px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  padding: 0 20px;
 
-    }
+  &.resource-icon-btn{
+    width: 35px;
+    padding: 0;
+  }
 
-    .btn.hdx-btn.resource-icon-btn img{
-        width: 14px;
-        margin-bottom: 5px;
-    }
+}
+
+.btn.hdx-btn.resource-icon-btn img{
+  width: 14px;
+  margin-bottom: 5px;
+}
 /* END Button style*/
